enable time machine

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 url: "https://galeri.cleone.id" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 title: "Galeri Cleone.ID" # the name of your site, e.g. ACME Corp.
+future: true
 plugins:
   - jekyll-feed
   - jekyll-sitemap
